--- a/enigma.html
+++ b/enigma.html
@@ -80,7 +80,7 @@
             // Verifica se o texto inserido corresponde à senha correta
             if (inputText === 'mestiço de olhos mortos') {
                 // Redireciona para a próxima página ao inserir a senha correta
-                window.location.href = 'https://www.exemplo.com/pagina-proxima';
+                window.location.href = 'https://www.youtube.com';
             } else {
                 // Mostra a mensagem de erro e a imagem de erro
                 document.querySelector('.error-message').style.display = 'block';
