--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boa sorte :D</title>
+    <title>Bem-vindo ao Site</title>
     <style>
         body {
             display: flex;
@@ -15,78 +15,47 @@
             font-family: Arial, sans-serif;
         }
         .container {
-            width: 300px;
+            width: 80%;
+            max-width: 600px;
             padding: 20px;
             background-color: #fff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
             text-align: center;
         }
-        input[type="text"] {
-            width: 100%;
-            padding: 10px;
-            font-size: 16px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            box-sizing: border-box;
-            margin-bottom: 10px;
+        h1 {
+            color: #007bff;
+        }
+        p {
+            font-size: 18px;
+            line-height: 1.6;
+            color: #333;
         }
         button {
-            padding: 10px;
+            padding: 10px 20px;
             font-size: 16px;
             background-color: #007bff;
             color: #fff;
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            transition: background-color 0.3s ease;
         }
         button:hover {
             background-color: #0056b3;
-        }
-        .error-message {
-            display: none;
-            margin-top: 20px;
-            color: red;
-            font-weight: bold;
-        }
-        .error-image {
-            display: none;
-            margin-top: 20px;
         }
     </style>
 </head>
 <body>
     <div class="container">
+        <h1>Bem-vindo ao Nosso Site!</h1>
         <p>
             Em 1633, o Japão fechou as fronteiras para o mundo exterior, completamente.
             Os cidadãos jamais veriam um rosto branco, nem qualquer rosto que não fosse japonês.
             Uma criança nascida da mistura de raças seria considerada menos que humana...
             Qual nome dado aos "monstros" de olhos azuis?
         </p>
-        <form id="input-form">
-            <input type="text" id="input-field" placeholder="Digite a senha..." required>
-            <button type="submit">Enviar</button>
-        </form>
-        <p class="error-message" id="error-message">ERRROOOOUUU!</p>
-        <img class="error-image" id="error-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoZsJVaQDUek7KBtyblpWM5-puoylskDepHKHwE1AoKU6ZTGxqiHCYZZ0&s=10" alt="Erro">
+        <button onclick="location.href='pagina-de-login.html'">Acessar</button>
     </div>
-
-    <script>
-        document.getElementById('input-form').addEventListener('submit', function(event) {
-            event.preventDefault(); // Evita a submissão do formulário
-
-            const inputText = document.getElementById('input-field').value.trim().toLowerCase();
-
-            // Verifica se o texto inserido corresponde à senha correta
-            if (inputText === 'mestiço de olhos mortos') {
-                // Redireciona para a próxima página ao inserir a senha correta
-                window.location.href = 'https://www.youtube.com';
-            } else {
-                // Mostra a mensagem de erro e a imagem de erro
-                document.querySelector('.error-message').style.display = 'block';
-                document.querySelector('.error-image').style.display = 'block';
-            }
-        });
-    </script>
 </body>
 </html>
