--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             const password = document.getElementById('password-field').value.trim().toLowerCase();
 
             // Verifica se a senha inserida está correta
-            if (password === 'mestiço de olhos mortos') {
+            if (password === 'olhos-mortos') {
                 // Redireciona para a próxima página ao inserir a senha correta
-                window.location.href = 'https://www.youtube.com';
+                window.location.href = 'page 2.html';
             } else {
                 // Mostra a mensagem de erro e a imagem de erro
                 document.querySelector('.error-message').style.display = 'block';
