--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
 <body>
     <div class="container">
         <p>
-            Em 1633, o Japão fechou as fronteiras para o mundo exterior, completamente.
-            Os cidadãos jamais veriam um rosto branco, nem qualquer rosto que não fosse japonês.
-            Uma criança nascida da mistura de raças seria considerada menos que humana...
-            Qual nome dado aos "monstros" de olhos azuis?
-        </p>
+             :ǝ̗ ɐɥuǝs ɐ 'ןıɔɐ̗ɟ ɹɐɔǝɯoɔ soɯɐʌ
+            <p></p>
+                  ɐʇɐʇɐq
+    </p>
         <form id="input-form">
             <input type="password" id="password-field" placeholder="Digite a senha..." required>
             <button type="submit">Enviar</button>
