--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             const password = document.getElementById('password-field').value.trim().toLowerCase();
 
             // Verifica se a senha inserida está correta
-            if (password === 'olhos-mortos') {
+            if (password === 'batata') {
                 // Redireciona para a próxima página ao inserir a senha correta
                 window.location.href = 'page 2.html';
             } else {
