--- a/page 2.html
+++ b/page 2.html
@@ -18,18 +18,36 @@
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
-        h1 {
-            color: #007bff;
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            box-sizing: border-box;
+            margin-bottom: 10px;
         }
-        p {
-            line-height: 1.6;
+        button {
+            padding: 10px;
+            font-size: 16px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
         }
-        a {
-            color: #007bff;
-            text-decoration: none;
+        button:hover {
+            background-color: #0056b3;
         }
-        a:hover {
-            text-decoration: underline;
+        .error-message {
+            display: none;
+            margin-top: 20px;
+            color: red;
+            font-weight: bold;
+        }
+        .error-image {
+            display: none;
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -37,11 +55,35 @@
     <div class="container">
         <h1>Bem-vindo à Outra Página</h1>
         <p>
-            Esta é uma página interna do seu site. Você pode adicionar mais conteúdo aqui conforme necessário.
+            Em 1633, o Japão fechou as fronteiras para o mundo exterior, completamente.
+            Os cidadãos jamais veriam um rosto branco, nem qualquer rosto que não fosse japonês.
+            Uma criança nascida da mistura de raças seria considerada menos que humana...
+            Qual nome dado aos "monstros" de olhos azuis?
         </p>
-        <p>
-            <a href="index.html">Voltar para a Página Inicial</a>
-        </p>
+        <form id="input-form">
+            <input type="password" id="password-field" placeholder="Digite a senha..." required>
+            <button type="submit">Enviar</button>
+        </form>
+        <p class="error-message" id="error-message">ERRROOOOUUU!</p>
+        <img class="error-image" id="error-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoZsJVaQDUek7KBtyblpWM5-puoylskDepHKHwE1AoKU6ZTGxqiHCYZZ0&s=10" alt="Erro">
     </div>
+
+    <script>
+        document.getElementById('input-form').addEventListener('submit', function(event) {
+            event.preventDefault(); // Evita a submissão do formulário
+
+            const password = document.getElementById('password-field').value.trim().toLowerCase();
+
+            // Verifica se a senha inserida está correta
+            if (password === 'olhos-mortos') {
+                // Redireciona para a página 3 ao inserir a senha correta
+                window.location.href = 'pagina3.html';
+            } else {
+                // Mostra a mensagem de erro e a imagem de erro
+                document.querySelector('.error-message').style.display = 'block';
+                document.querySelector('.error-image').style.display = 'block';
+            }
+        });
+    </script>
 </body>
 </html>
