--- a/page 2.html
+++ b/page 2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Outra Página</title>
+    <title>nivel 2</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -53,7 +53,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Bem-vindo à Outra Página</h1>
+        <h1>Muito bem!
+        <p>Agora sim, vamos começar</h1>
         <p>
             Em 1633, o Japão fechou as fronteiras para o mundo exterior, completamente.
             Os cidadãos jamais veriam um rosto branco, nem qualquer rosto que não fosse japonês.
