--- a/page 2.html
+++ b/page 2.html
@@ -59,7 +59,7 @@
             Em 1633, o Japão fechou as fronteiras para o mundo exterior, completamente.
             Os cidadãos jamais veriam um rosto branco, nem qualquer rosto que não fosse japonês.
             Uma criança nascida da mistura de raças seria considerada menos que humana...
-            Qual nome dado aos "monstros" de olhos azuis?
+            Qual nome dado aos "monstros" de olhos azuis? (primeiro episódio, na primeira vez que mizu tira o óculos)
         </p>
         <form id="input-form">
             <input type="password" id="password-field" placeholder="Digite a senha..." required>
