--- a/pagina3.html
+++ b/pagina3.html
@@ -82,7 +82,7 @@
             // Verifica se a senha inserida está correta
             if (password === 'mizu') {
                 // Redireciona para outra página autorizada após inserir a senha correta
-                window.location.href = 'outra-pagina.html'; // Página autorizada após inserir a senha correta
+                window.location.href = 'pagina4.html'; // Página autorizada após inserir a senha correta
             } else {
                 // Mostra a mensagem de erro e a imagem de erro
                 document.querySelector('.error-message').style.display = 'block';
