--- a/page 2.html
+++ b/page 2.html
@@ -62,7 +62,7 @@
             Qual nome dado aos "monstros" de olhos azuis? (primeiro episódio, na primeira vez que mizu tira o óculos)
         </p>
         <form id="input-form">
-            <input type="password" id="password-field" placeholder="Digite a senha..." required>
+            <input type="password" id="password-field" placeholder="mestiço de olhos..." required>
             <button type="submit">Enviar</button>
         </form>
         <p class="error-message" id="error-message">ERRROOOOUUU!</p>
@@ -76,7 +76,7 @@
             const password = document.getElementById('password-field').value.trim().toLowerCase();
 
             // Verifica se a senha inserida está correta
-            if (password === 'olhos-mortos') {
+            if (password === 'mortos') {
                 // Redireciona para a página 3 ao inserir a senha correta
                 window.location.href = 'pagina3.html';
             } else {
