--- a/pagina5.html
+++ b/pagina5.html
@@ -56,14 +56,15 @@
 </head>
 <body>
     <div class="container">
-        <h1>Bem-vindo à Página 5</h1>
+        <h1>tá quase acabando, prometo</h1>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRjXW1N5qlnOrtuha_fxJff2bBXb6yAHLygi1naMl6J3KAPIr0OCAKZ0qp8&s=10" alt="Imagem de exemplo">
         <p>
-            Esta é outra página protegida por senha.
-            Insira a senha correta para acessar o conteúdo.
+            Onde é que se passa OSNI, mesmo?
+            Eu só esqueci qual que era o nome da ilha... 
+        
         </p>
         <form id="password-form">
-            <input type="password" id="password-field" placeholder="Digite a senha..." required>
+            <input type="password" id="password-field" placeholder="ilha de..." required>
             <button type="submit">Enviar</button>
         </form>
         <p class="error-message" id="error-message">Senha incorreta. Tente novamente.</p>
